// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<XUICompositionDetail> renders basic example 1`] = `
<div
  className="xui-composition xui-composition-is-finite xui-composition-has-auto-space-around xui-composition-detail"
>
  <div
    className="xui-gridarea-detail"
  >
    <div />
  </div>
</div>
`;

exports[`<XUICompositionDetail> should do nothing with children 1`] = `
<div
  className="xui-composition xui-composition-is-finite xui-composition-has-auto-space-around xui-composition-detail"
>
  <div
    className="xui-gridarea-detail"
  >
    <div />
  </div>
</div>
`;

exports[`<XUICompositionDetail> should include custom class and omit width-limiting class, if specified 1`] = `
<div
  className="xui-composition xui-composition-has-auto-space-around xui-composition-detail single-without-head"
>
  <div
    className="xui-gridarea-detail"
  >
    <div />
  </div>
</div>
`;
